# sharp

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  DIARY.md  GEMINI.md  MISMATCH_RESOLUTION_SUMMARY.md  PLAN.md  README.md  STATUS.md  TEST_FAILURE_ANALYSIS.md  USAGE.md  USER_PROBLEMS.md  counter_workspace.cpp  output.mlir  pixi.toml  setup.md  test-failure-examples.mlir  test-workspace-gen.sh  test_clang20.sh  test_import.py  test_import2.py  test_sharp.py  test_sim_workspace.mlir  test_workspace.sh
archieves/: 2025-06-29-PLAN.md  DIARY.md  DIARY.md 
cmake/: SharpConfig.cmake.in
counter_workspace/: CMakeLists.txt  README.md  SimulationBase.cpp  SimulationBase.h
demo_workspace/: Counter_sim.cpp  README.md
docs/: CMakeLists.txt  analysis.md  analysis_pass_fixes.md  combinational_loop_detection.md  execution_model.md  firrtl_operations_guide.md  llvm_lowering_completion.md  python_binding.md  pythonic_frontend.md  simulation.md  submodule_support.md  test.md  txn.md  txn_primitive.md  txn_to_firrtl.md  txn_to_func_cf_dialect.md  verilog_export.md
examples/: README.md  analysis_example.mlir  comprehensive_example.mlir  conditional_logic.mlir  jit_simulation_example.mlir  most_dynamic_example.mlir  python_counter.py  simple_alu.mlir  value-method-replacement.mlir  verilog_export_example.mlir
examples/sharp-tutorial/: README.md
examples/sharp-tutorial/chapter1-basics/: README.md  run.sh  toggle.mlir
examples/sharp-tutorial/chapter1-basics/toggle_sim/: CMakeLists.txt  README.md  SimulationBase.cpp  Toggle_sim.cpp
examples/sharp-tutorial/chapter2-modules-methods/: README.md  counter.mlir  run.sh
examples/sharp-tutorial/chapter3-primitives/: README.md  memory_example.mlir  producer_consumer.mlir  specfifo_example.mlir
examples/sharp-tutorial/chapter4-analysis/: README.md  complex_module.mlir  incomplete_schedule.mlir  loop_example.mlir  non_synthesizable.mlir  run.sh
examples/sharp-tutorial/chapter5-translation/: .gitignore  ISSUES.md  Makefile  README.md  conditional_logic.mlir  converted_output.mlir  counter.fir  counter_hw.mlir  counter_hw_analysis.mlir  counter_hw_static_intermediate.mlir  datapath.fir  datapath.mlir  nested_modules.mlir  nested_modules_dynamic_intermediate.mlir  prep_output.mlir  run.sh  run_all_modes.sh  run_dynamic.sh  run_most_dynamic.sh  run_static.sh  simple_test.mlir  translate_one.sh
examples/sharp-tutorial/chapter6-simulation/: README.md  counter_rtl.mlir  perf_test.mlir  pipeline.mlir  run.sh
examples/sharp-tutorial/chapter7-python/: README.md  advanced_features.py  counter.py  matrix_mult.py  pipeline_gen.py  run.sh
frontends/PySharp/: CMakeLists.txt  setup.py
frontends/PySharp/src/: CMakeLists.txt
frontends/PySharp/src/pysharp/: __init__.py  builder.py  common.py  module.py  signals.py  support.py  types.py
frontends/PySharp/src/pysharp/dialects/: __init__.py  arith.py  comb.py  hw.py  seq.py  txn.py
frontends/PySharp/src/pysharp/sharp/: __init__.py
frontends/PySharp/src/pysharp/sharp/dialects/: __init__.py
frontends/PySharp/test/: CMakeLists.txt  test_basic.py
include/sharp/: CMakeLists.txt  InitAllDialects.h
include/sharp-c/: Dialects.h
integration_test/: lit.cfg.py
integration_test/pysharp/: basic.py  run_tests.sh  test_basic.sh  test_module_builder.py  test_module_class.py  test_signal_arithmetic.py  test_standalone.py  test_types.py
lib/: CMakeLists.txt
lib/Analysis/: ActionCallValidation.cpp  ActionScheduling.cpp  AnalysisError.cpp  CMakeLists.txt  CollectPrimitiveActions.cpp  CombinationalLoopDetection.cpp  ConflictDebugger.cpp  ConflictMatrixInference.cpp  GeneralCheck.cpp  InlineFunctions.cpp  MethodAttributeValidation.cpp  PreSynthesisCheck.cpp  PrimitiveGen.cpp  ReachabilityAnalysis.cpp  ScheduleDebugger.cpp  ScheduleValidation.cpp  ValueMethodConflictCheck.cpp
lib/Bindings/: CMakeLists.txt
lib/CAPI/: CMakeLists.txt  Core.cpp  Txn.cpp
lib/Conversion/: CMakeLists.txt  PassDetail.cpp
lib/Dialect/: CMakeLists.txt
lib/Simulation/: CMakeLists.txt
lib/Support/: CMakeLists.txt
lib/Transforms/: CMakeLists.txt
references/: NOTES.md  PLAN.md
scripts/: build-circt.sh  build-llvm.sh  build-unified-quiet.sh  build-unified.sh  configure-quiet.sh  init-submodules.sh  run-unit-tests.sh  setup-clang20.sh  test-python-bindings.sh
test/: CMakeLists.txt  REORGANIZATION_PLAN.md  TEST_REORGANIZATION_SUMMARY.md  lit.cfg.py  lit.site.cfg.py.in  test-summary.md
test/Analysis/: CMakeLists.txt  action-call-validation.mlir  action-scheduling-errors.mlir  action-scheduling-heuristic.mlir  action-scheduling-updated.mlir  action-scheduling.mlir  analysis-integration.mlir  combinational-loop-detection.mlir  conflict-matrix-inference.mlir  dominance-issue-example.mlir  inline-functions.mlir  method-attribute-validation.mlir  pre-synthesis-check-ops.mlir  pre-synthesis-check.mlir  reachability-analysis.mlir  reachability-with-conditions.mlir  schedule-validation.mlir  value-method-conflict-check.mlir
test/Conversion/: txn-to-verilog.mlir
test/Misc/: README.md  dialects-coexist.mlir  firrtl-comb-hw-coexist.mlir  firrtl-comb-hw-simple.mlir  lit.local.cfg  minimal-coexist.mlir
test/Simulation/: CMakeLists.txt  arcilator-basic.mlir  arcilator-simple.mlir  concurrent-dam.mlir  concurrent-simple.mlir  counter-sim.mlir  hybrid-bridge.mlir  hybrid-sim.mlir  hybrid-simple.mlir  jit-basic.mlir  jit-lowering.mlir  jit-simple.mlir  multi-cycle.mlir  three-phase-execution.mlir  txn-simulate.mlir
test/python/: basic-import.py  construction_simple_test.py  construction_test.py  lit.local.cfg.py  pysharp-import.py  pysharp-module.py  simple_sharp_test.py  test_bindings.py  test_construction_simple.py  test_mlir_circt_access.py  test_pysharp.py  test_pysharp_frontend.py  test_pysharp_standalone.py  test_sharp_bindings.py
tools/: CMakeLists.txt  generate-workspace.sh
tools/sharp-opt/: CMakeLists.txt  sharp-opt.cpp
unittests/: CMakeLists.txt
unittests/Dialect/: CMakeLists.txt
unittests/Dialect/Txn/: CMakeLists.txt  PrimitivesTest.cpp
unittests/Simulation/: CMakeLists.txt  basic.cpp
(+209 files in other folders)
